[FE-015] Crear ruta manual
